sql/sql_table.cc
@@ -65,6 +65,7 @@
 #include "rpl_rli.h"
 #include "log.h"
 #include "sql_debug.h"
+#include "scope.h"
 
 #ifdef _WIN32
 #include <io.h>
@@ -10235,6 +10236,12 @@ bool mysql_alter_table(THD *thd, const LEX_CSTRING *new_db,
   {
     table_list->lock_type= TL_READ;
   }
+
+  enum_tx_isolation iso_level_initial= thd->tx_isolation;
+  SCOPE_EXIT([thd, iso_level_initial](){
+    thd->tx_isolation= iso_level_initial;
+  });
+  thd->tx_isolation= ISO_REPEATABLE_READ;
 
   DEBUG_SYNC(thd, "alter_table_before_open_tables");
 
